# HardwareOne

./: .gitignore  BACKWARD_COMPATIBILITY_ANALYSIS.md  BLE_IMPLEMENTATION_SUMMARY.md  BLE_INTEGRATION_STATUS.md  BLE_STREAMING_GUIDE.md  BOND_REFACTOR_NOTES.md  CLEANUP_ANALYSIS.md  CLEANUP_COMPLETE_SUMMARY.md  CMakeLists.txt  COMMIT_MSG.txt  GAMEPAD_REMOTE_TESTING.md  MEMORY_CONSUMPTION_REPORT.md  MODULAR_SETTINGS_IMPLEMENTATION.md  README.md  REMOTE_SENSORS_IMPLEMENTATION.md  TASK_STACK_SPIKE_ANALYSIS.md  UNIFORMITY_IMPLEMENTATION_COMPLETE.md  partitions.csv  partitions_no_sr.csv  partitions_sr.csv  sdkconfig  sdkconfig.defaults  sdkconfig.defaults.esp32  sdkconfig.defaults.esp32s3  sdkconfig.xiao_sense_backup
components/: icons_embedded.cpp
components/hardwareone/: BLE_IDF.cpp  BLE_IDF.h  CMakeLists.txt  Display_ST7789_Pins.md  ESPNOW_RELIABILITY_MANDATORY.md  ESPNOW_V2_COMPLETE.md  ESPNOW_V2_MIGRATION_STATUS.md  HAL_Display.cpp  HAL_Display.h  HAL_Input.cpp  HAL_Input.h  HardwareOne.cpp  I2C_MIGRATION_PLAN.md  OLED_ConsoleBuffer.h  OLED_Display.h  OLED_ESPNow.cpp  OLED_ESPNow.h  OLED_FirstTimeSetup.cpp  OLED_FirstTimeSetup.h  OLED_Footer.h  OLED_Mode_Animations.cpp  OLED_Mode_Auth.cpp  OLED_Mode_Automations.cpp  OLED_Mode_CLI.cpp  OLED_Mode_ChangePassword.cpp  OLED_Mode_FileBrowser.cpp  OLED_Mode_Logging.cpp  OLED_Mode_Map.cpp  OLED_Mode_Menu.cpp  OLED_Mode_Network.cpp  OLED_Mode_Power.cpp  OLED_Mode_Remote.cpp  OLED_Mode_RemoteSettings.cpp  OLED_Mode_Sensors.cpp  OLED_Mode_SetPattern.cpp  OLED_Mode_Settings.cpp  OLED_Mode_Speech.cpp  OLED_Mode_System.cpp  OLED_Mode_UnifiedMenu.cpp  OLED_RemoteSettings.cpp  (+191 more)
components/hardwareone_libs/: CMakeLists.txt
components/hardwareone_libs/Adafruit_seesaw_Library/: Adafruit_seesaw.h
docs/: BOARD_SWITCHING.md  BOND_SETTINGS_ARCHITECTURE.md  MULTI_CAMERA_SYSTEM_PLAN.md  QUICKSTART.md  SD_CARD_INTEGRATION_PLAN.md  USERGUIDE.md  espnow-architecture.md
docs/archive/implementation-history/: ADDITIONAL_UNIFORMITY_OPPORTUNITIES.md  COMPREHENSIVE_UNIFORMITY_IMPLEMENTATION.md  IMPLEMENTATION_COMPLETE.md  UNIFORMITY_CHANGES_SUMMARY.md
docs/archive/uniformity-proposals/: COMMAND_REGISTRATION_RESEARCH.md  ERROR_MESSAGE_UNIFORMITY_PROPOSAL.md  SETTINGS_MODULE_PROPOSAL.md  SUCCESS_MESSAGE_UNIFORMITY_PLAN.md  TASK_DOCUMENTATION_PROPOSAL.md
main/: CMakeLists.txt  hardwareone-idf.cpp
randomscripts/: count_lines.py
