idf_component_register(
    SRCS
        HardwareOne.cpp
        i2csensor-apds9960.cpp
        i2csensor-pa1010d.cpp
        System_Maps.cpp
        i2csensor-seesaw.cpp
        i2csensor-bno055.cpp
        i2csensor-mlx90640.cpp
        i2csensor-vl53l4cx.cpp
        i2csensor-rda5807.cpp
        i2csensor-ds3231.cpp
        i2csensor-sths34pf80.cpp
        WebServer_Events.cpp
        WebServer_Server.cpp
        WebServer_Utils.cpp
        WebPage_Sensors.cpp
        WebPage_Maps.cpp
        WebPage_Games.cpp
        WebPage_ESPNow.cpp
        WebPage_Bluetooth.cpp
        WebPage_Speech.cpp
        System_Automation.cpp
        Optional_Bluetooth.cpp
        Optional_EvenG2.cpp
        System_Battery.cpp
        System_CLI.cpp
        System_Command.cpp
        System_Debug.cpp
        System_ESPNow.cpp
        System_ESPNow_Sensors.cpp
        System_FileManager.cpp
        System_Filesystem.cpp
        System_FirstTimeSetup.cpp
        System_I2C.cpp
        System_I2C_Manager.cpp
        System_Icons.cpp
        HAL_Input.cpp
        HAL_Display.cpp
        System_Mutex.cpp
        System_Power.cpp
        System_NeoPixel.cpp
        OLED_Utils.cpp
        OLED_Settings.cpp
        OLED_ESPNow.cpp
        OLED_SettingsEditor.cpp
        OLED_FirstTimeSetup.cpp
        OLED_Mode_Settings.cpp
        OLED_Mode_Auth.cpp
        OLED_Mode_CLI.cpp
        OLED_Mode_Logging.cpp
        OLED_Mode_Map.cpp
        OLED_Mode_Power.cpp
        OLED_Mode_Network.cpp
        OLED_Mode_System.cpp
        OLED_Mode_Sensors.cpp
        OLED_Mode_Animations.cpp
        OLED_Mode_Menu.cpp
        OLED_Mode_FileBrowser.cpp
        OLED_Mode_Speech.cpp
        System_MemoryMonitor.cpp
        i2csensor-pca9685.cpp
        System_Hardware.cpp
        System_SensorLogging.cpp
        System_SensorStubs.cpp
        System_Settings.cpp
        System_SetupWizard.cpp
        System_FeatureRegistry.cpp
        OLED_SetupWizard.cpp
        System_Utils.cpp
        System_TaskUtils.cpp
        System_User.cpp
        System_Auth.cpp
        System_Users.cpp
        System_WiFi.cpp
        System_MQTT.cpp
        WebPage_MQTT.cpp
        System_Camera_DVP.cpp
        System_ImageManager.cpp
        System_EdgeImpulse.cpp
        System_ESPSR.cpp
        System_VFS.cpp
        System_Microphone.cpp
        System_SensorRegistry.cpp
    INCLUDE_DIRS
        .
    REQUIRES
        arduino
        hardwareone_libs
        esp_http_server
        bt
        esp_wifi
        esp32-camera
        fatfs
        sdmmc
        esp_driver_sdspi
        mqtt
)

# Enable Sense features for ESP32-S3 boards (camera, mic, SD card on expansion board)
# This enables SD_CS_PIN and other Sense-specific defines in System_BuildConfig.h
if(CONFIG_IDF_TARGET_ESP32S3)
    target_compile_definitions(${COMPONENT_LIB} PUBLIC XIAO_ESP32S3_SENSE_ENABLED=1)
    target_compile_definitions(${COMPONENT_LIB} PUBLIC ENABLE_CAMERA_SENSOR=1)
    message(STATUS "XIAO ESP32S3 Sense features ENABLED (camera, mic, SD card)")
endif()

target_compile_options(${COMPONENT_LIB} PRIVATE
    -Wno-error=format-truncation
    -Wno-error=maybe-uninitialized
)
